src/components/footer/footer.css
.footer{
    background-color: #ddd;
}
  .search-bar {
    position: relative;
  }
  
  .search-input {
    width: 20px;
    height: 40px;
    margin-left: 1px;
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 0 40px 0 10px; 
    box-sizing: border-box;
    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.3);
  }
  
  .subscribe-button {
    position: absolute;
    top: 0;
    left:160px;
    height: 100%;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 5px 5px 5px 5px;
    cursor: pointer;
    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.3);
  }
  p{
    color: black;
  }
  a{
    color: black;
  }
  
  .social-icons{
	padding:20px;
  text-align: center;
}
.social-icons a{
  color:black;
  background-color: #ddd;;
  width: 100px;
  border-radius: 5px;
  line-height:30px;
  font-size:20px;
  margin: 0 5px;
  text-decoration:none;
  
}

.lang{
    background-color: white;
    border-radius: 20px;
    height: 50px;
    width: 90px;
}

